GNOME Bugzilla – Bug 736599
Regression: Nautilus crashes reliably when used with Orca
Last modified: 2014-09-13 04:12:47 UTC
Steps to reproduce: 1. Launch the attached accessible event listener in a terminal 2. Launch nautilus 3. Arrow in icon view to change the selected item Expected result: Nautilus would not crash Actual result: Nautilus reliably crashes. See below. Git bisect says: ecc8fdbca6acb446ffa89a6fea31616b77a4224a is the first bad commit commit ecc8fdbca6acb446ffa89a6fea31616b77a4224a Author: Cosimo Cecchi <cosimoc@gnome.org> Date: Sat Aug 30 18:43:41 2014 -0700 canvas-container: remove duplicated code $ ./selection.py & $ gdb nautilus object:selection-changed(0, 0, 0) source: [table | ] host_application: [application | nautilus] nSelectedChildren: 1 0. [table cell | ] object:selection-changed(0, 0, 0) source: [layered pane | Icon View] host_application: [application | nautilus] nSelectedChildren: 1 Program received signal SIGSEGV, Segmentation fault. g_type_check_instance_cast (type_instance=0x2, iface_type=iface_type@entry=80) at gtype.c:4008 4008 if (type_instance->g_class) (gdb) bt
+ Trace 234088
Thanks for the report, I just pushed a fix for this to git master.
Thanks for the quick (and verified) fix. :)