canvas-container: don't mix selected files with selected icons

The refactoring in commit ecc8fdbca6acb446ffa89a6fea31616b77a4224a made
this use a function to fetch selected files instead of selected icons,
which will cause a crash when iterating through the selection.

https://bugzilla.gnome.org/show_bug.cgi?id=736599